gcc/testsuite/gdc.test/compilable/imports/test1238a.d
module imports.test1238a;

private int zuiop;
